add jvm args for backward compatibility with org.knowm.xchange:xchange-hitbtc